Add default game mode with test debug message

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,3 +10,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/MonsterFPS")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/MonsterFPS")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/MyFPSGameMode.MyFPSGameMode_C
+
