Add a new Module

--- a/MonsterFPS.uproject
+++ b/MonsterFPS.uproject
@@ -11,6 +11,11 @@
 			"AdditionalDependencies": [
 				"Engine"
 			]
+		},
+		{
+			"Name": "Graphics",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
 		}
 	]
 }
